@@ -42,20 +42,23 @@ public class IndexHelper
      * @param in the data input from which the bloom filter should be skipped
      * @throws IOException
      */
-    public static void skipBloomFilter(DataInput in) throws IOException
+    public static void skipBloomFilter(DataInput in, FilterFactory.Type type) throws IOException
     {
         /* size of the bloom filter */
         int size = in.readInt();
-        /* skip the serialized bloom filter */
-        if (in instanceof FileDataInput)
+        switch (type)
         {
-            FileUtils.skipBytesFully(in, size);
-        }
-        else
-        {
-            // skip bytes
-            byte[] skip = new byte[size];
-            in.readFully(skip);
+            case SHA:
+                // can skip since bitset = 1 byte
+                FileUtils.skipBytesFully(in, size);
+                break;
+            case MURMUR2:
+            case MURMUR3:
+                long bitLength = in.readInt() * 8;
+                FileUtils.skipBytesFully(in, bitLength);
+                break;
+            default:
+                throw new IllegalStateException("Unknown filterfactory type " + type.toString());
         }
     }
 
